# ReferWellDirect

./: .env.example  .gitattributes  .gitignore  .gitmessage  .pre-commit-config.yaml  GITHUB_ACTIONS_SETUP.md  GITHUB_SETUP.md  Makefile  OPEN_TASKS.md  PROJECT_MILESTONES.md  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements-minimal.txt  requirements.in  requirements.txt  setup-github.sh
.cursor/rules/:  00-project.mdc  00-project.mdc  10-quality-and-structure.mdc  20-django-and-data.mdc  30-matching-engine.mdc  40-ux-accessibility.mdc  50-security-and-privacy.mdc  60-stubs-and-integrations.mdc  accessibility.md  accessibility.mdc  code-quality.mdc  code_quality.md  django.md  django.mdc  git_best_practices.md  testing.md  testing.mdc
.github/workflows/: ci.yml  database.yml  dependencies.yml  deploy.yml  pre-commit.yml  quality.yml  security.yml
ADR/: 0001-architecture.md
REPORTS/: RUN_LOG.txt  STAGE_COMPLIANCE.md
accounts/: admin.py  api_urls.py  apps.py  forms.py  models.py  serializers.py  test_models.py  test_onboarding.py  tests.py  urls.py  views.py
accounts/management/commands/: setup_onboarding_steps.py
accounts/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_onboardingstep_useronboardingprogress_and_more.py  0004_organisation_location.py  0005_verificationstatus_patientclaiminvite.py
catalogue/: __init__.py  admin.py  api_urls.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
catalogue/migrations/: 0001_initial.py  0002_add_postgis_support.py  0003_alter_psychologist_languages.py  __init__.py
docker/postgres/: init.sql
inbox/: __init__.py  api_urls.py  apps.py  consumers.py  models.py  serializers.py  services.py  sse_views.py  urls.py  views.py
inbox/management/commands/: send_test_notifications.py  setup_notification_templates.py  test_notifications.py
inbox/migrations/: 0001_initial.py  0002_notificationtemplate_email_body_template_and_more.py  __init__.py
inbox/tests/: test_notifications.py
matching/: admin.py  api_urls.py  apps.py  models.py  routing_service.py  services.py  tests.py  urls.py  views.py
matching/management/commands/: test_matching.py  test_performance.py  test_routing.py  update_embeddings.py
matching/migrations/: 0001_initial.py  0002_matchingrun_algorithm_name_and_more.py  __init__.py
matching/tests/: __init__.py  test_models.py  test_services.py  test_views.py
ops/: __init__.py  api_urls.py  apps.py  models.py  urls.py  views.py
ops/migrations/: 0001_initial.py  __init__.py
payments/: api_urls.py  apps.py  models.py  urls.py  views.py
payments/migrations/: 0001_initial.py  __init__.py
public/: apps.py  tests.py  urls.py  views.py
referrals/: __init__.py  admin.py  analytics_service.py  analytics_urls.py  analytics_views.py  api_urls.py  apps.py  bulk_operations_service.py  forms.py  models.py  search_service.py  serializers.py  test_self_referral.py  tests.py  urls.py  views.py
referrals/migrations/: 0001_initial.py  0002_add_high_touch_queue_status.py  0003_referral_condition_description.py  0004_alter_referral_referral_id.py  0005_referral_language_requirements.py  0006_referral_patient_age_group_referral_routing_metadata.py  0007_alter_referral_patient_patientprofile_and_more.py  __init__.py
referwell/: __init__.py  api_urls.py  asgi.py  celery.py  urls.py  wsgi.py
referwell/settings/: base.py  development.py  production.py
static/css/: premium-design-system.css
static/js/: notifications.js
templates/: base.html
templates/accounts/: dashboard.html  gp_create_patient.html  gp_invite_patient.html  gp_invite_success.html  home.html  patient_claim.html  profile.html  signin.html  verification_pending.html
templates/accounts/onboarding/: base.html  completion.html  gp_signup.html  organisation_setup.html  preferences.html  profile_setup.html  psych_details.html  psych_signup.html  verification.html
templates/catalogue/: psychologist_dashboard.html  psychologist_detail.html  psychologist_list.html
templates/inbox/: notification_list.html
templates/inbox/emails/: appointment.html  base_email.html  invitation.html  matching_complete.html  referral_update.html  reminder.html  system.html
templates/matching/: dashboard.html  performance.html  results.html
templates/public/: landing.html  role_page.html
templates/referrals/: analytics_dashboard.html  create_referral.html  dashboard.html  referral_detail.html  referral_list.html  self_referral_start.html  self_referral_success.html
